--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,5 @@ x509.genkey
 *.kdev4
 /proj2/userland/cmake-build-debug/
 /proj2/userland/CMakeLists.txt
+/proj2/misc/a.out
+/proj2/testing/a.out
